--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^0.13.3
   ionicons: ^0.1.2
   provider: ^5.0.0
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
