--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
     - assets/images/kategori/
     - assets/icons/
     - assets/images/profile/
+    - assets/datasets/countries.json
 
   fonts:
     - family: Gilroy
