--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   ionicons: ^0.1.2
   provider: ^5.0.0
   google_fonts: ^2.1.0
+  swipe: ^0.0.1
 
 dev_dependencies:
   flutter_test:
