--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^5.0.0
   google_fonts: ^2.1.0
   swipe: ^0.0.1
+  shared_preferences: ^2.0.8
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
