--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   http: ^0.13.3
+  json_serializable: ^6.0.1
   ionicons: ^0.1.2
   provider: ^5.0.0
   google_fonts: ^2.1.0
@@ -35,10 +36,13 @@ dependencies:
   parse_server_sdk_flutter: ^3.1.0
   equatable: ^2.0.3
   dartz: ^0.10.0
+  json_annotation: ^4.3.0
+  vexana: ^2.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
