--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dartz: ^0.10.0
   json_annotation: ^4.3.0
   vexana: ^2.4.2
+  flutter_bloc: ^7.0.0
 
 dev_dependencies:
   flutter_test:
