--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
   json_annotation: ^4.3.0
   vexana: ^2.4.2
   flutter_bloc: ^7.0.0
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.7
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.4
+  hive_generator: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
