--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   hive_flutter: ^1.1.0
   path_provider: ^2.0.7
+  freezed_annotation: ^1.0.0
   
 
 dev_dependencies:
@@ -48,6 +49,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.1.4
   hive_generator: ^1.1.1
+  freezed: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
