--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  dio: ^4.0.4
+  retrofit: ^3.0.0
   http: ^0.13.3
   json_serializable: ^6.0.1
   ionicons: ^0.1.2
@@ -37,7 +39,7 @@ dependencies:
   equatable: ^2.0.3
   dartz: ^0.10.0
   json_annotation: ^4.3.0
-  vexana: ^2.4.2
+  
   flutter_bloc: ^7.0.0
   hive_flutter: ^1.1.0
   path_provider: ^2.0.7
@@ -49,6 +51,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.1.4
   hive_generator: ^1.1.1
+  retrofit_generator: '>=3.0.0 <4.0.0'
   freezed: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
