--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   path_provider: ^2.0.7
   freezed_annotation: ^1.0.0
   easy_localization: ^3.0.0
+
+  fluttertoast: ^8.0.8
   
 
 dev_dependencies:
