--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   parse_server_sdk_flutter: ^3.1.0
   shared_preferences: ^2.0.9
   fluttertoast: ^8.0.8
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
